--- a/Maelstorm/wwwroot/css/user.css
+++ b/Maelstorm/wwwroot/css/user.css
@@ -209,8 +209,7 @@
 
 #settingsInnerContainer {
     display: flex;
-    flex-direction: column;
-    background-color: rgba(0,0,0,0.6);
+    flex-direction: column;    
     z-index: 999;
     width: 100%;
 }
@@ -240,7 +239,7 @@
 }
 
 .settingsBlock {
-    background-color: black;
+    background-color: #2E2E30;
     color: white;
     font-weight: bold;
     border: 1px solid white;
@@ -265,6 +264,10 @@
     position: absolute;
     right: 20px;
     cursor: pointer;
+    display: flex;
+    top: 0;
+    bottom: 0;
+    align-items: center;
 }
 
 .btn-light, .btn-light:focus, .btn-light:active {
